@@ -13,4 +13,5 @@
 /*                                                                        */
 /**************************************************************************/
 
-extern value caml_unix_cst_to_constr(int n, int * tbl, int size, int deflt);
+extern value caml_unix_cst_to_constr(int n, const int * tbl, int size,
+                                     int deflt);
