@@ -22,22 +22,22 @@
 #include "unixsupport.h"
 #include <fcntl.h>
 
-static int open_access_flags[15] = {
+static const int open_access_flags[15] = {
   GENERIC_READ, GENERIC_WRITE, GENERIC_READ|GENERIC_WRITE,
   0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
 };
 
-static int open_create_flags[15] = {
+static const int open_create_flags[15] = {
   0, 0, 0, 0, 0, O_CREAT, O_TRUNC, O_EXCL, 0, 0, 0, 0, 0, 0, 0
 };
 
-static int open_share_flags[15] = {
+static const int open_share_flags[15] = {
   0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, FILE_SHARE_DELETE, 0, 0
 };
 
 enum { CLOEXEC = 1, KEEPEXEC = 2 };
 
-static int open_cloexec_flags[15] = {
+static const int open_cloexec_flags[15] = {
   0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, CLOEXEC, KEEPEXEC
 };
 
